# Hackaton2023

./: .gitignore  discharge_papers.txt  hf_test.py  main.py  pyproject.toml  translate.py
Backend/: hf_test.py  main.py  test.py
aws_translations/: בדיקות MRI ,CT ומיפויים מורכבים.txt  בדיקת אלרגיה.txt  בקטרובן Bactroban.txt  וולטרן אמולג'ל Voltaren Emulgel.txt  חיסוני אלרגיה - זריקת דיסנסיטיזציה.txt  ימי החלמה לאחר אירוע לב.txt  מוקדים לרפואה דחופה.txt  פוסידין (משחה וקרם) Fucidin.txt  פינוי באמבולנס בעקבות איבוד הכרה.txt  פינוי למיון במקרה של תגובה אלרגית קשה.txt  פנייה לחדר מיון.txt  צפורל (הופסק השיווק) Ceforal.txt
data_library/: Allergy shots - desensitization shot.txt  Allergy test.txt  Bactroban  Bactroban Bactroban.txt  Ceforal (marketing stopped) Ceforal  Contact the emergency room  Emergency medical centers.txt  Evacuation by ambulance following loss of consciousness  Evacuation to the emergency room in case of a severe allergic reaction.txt  Fucidin (ointment and cream) Fucidin  MRI, CT and complex mapping tests.txt  Recovery days after a heart attack.txt  Voltaren Emulgel Voltaren Emulgel.txt  בדיקות MRI ,CT ומיפויים מורכבים.txt  בדיקת אלרגיה.txt  חיסוני אלרגיה - זריקת דיסנסיטיזציה  ימי החלמה לאחר אירוע לב.txt  מוקדים לרפואה דחופה.txt  פינוי למיון במקרה של תגובה אלרגית קשה.txt
data_library_hebrew/: בקטרובן Bactroban  בקטרובן Bactroban.txt  וולטרן אמולג'ל Voltaren Emulgel  פוסידין (משחה וקרם) Fucidin  פוסידין (משחה וקרם) Fucidin.txt  פינוי באמבולנס בעקבות איבוד הכרה.txt  פנייה לחדר מיון.txt  צפורל (הופסק השיווק) Ceforal  צפורל (הופסק השיווק) Ceforal.txt
(+2 files in other folders)
