[tool.poetry]
name = "hackaton2023"
version = "0.1.0"
description = ""
authors = ["Daniel Sliwowicz <danielsl@campus.technion.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
boto3 = "^1.26.102"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
