[tool.poetry]
name = "hackaton2023"
version = "0.1.0"
description = ""
authors = ["Daniel Sliwowicz <danielsl@campus.technion.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
boto3 = "^1.26.102"
flask = "^2.2.3"
instructorembedding = "^1.0.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
